infra/base/rollout.yaml
apiVersion: argoproj.io/v1alpha1
kind: Rollout
metadata:
  name: app-rollout
  labels:
    app.kubernetes.io/name: app
spec:
  replicas: 2
  revisionHistoryLimit: 5
  strategy:
    canary:
      steps:
        - setWeight: 10
        - pause: {duration: 60}
        - setWeight: 25
        - pause: {duration: 120}
        - setWeight: 50
        - pause: {duration: 180}
      trafficRouting:
        nginx: {}
  selector:
    matchLabels:
      app.kubernetes.io/name: app
  template:
    metadata:
      labels:
        app.kubernetes.io/name: app
    spec:
      containers:
        - name: app
          image: ghcr.io/placeholder/app:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8080
